--- a/src/predict.ipynb
+++ b/src/predict.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import hashlib\n",
     "import os \n",
     "from utils import logger\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np\n",
     "from sklearn.feature_selection import SelectFromModel\n",
     "from sklearn import datasets\n",
     "\n",
@@ -31,19 +31,31 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from utils import logger\n",
-    "import sys"
+    "import sys\n",
+    "\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# from mpl_toolkits.mplot3d import axes3d\n",
+    "\n",
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "import itertools as it\n",
+    "\n",
+    "# %matplotlib notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Selection"
+    "# Feature Selection\n",
+    "#### Lasso\n",
+    "#### PCA - It is using the correlation between some dimensions and tries to provide a minimum number of variables that keeps the maximum amount of variation or information about how the original data is distributed. \n",
+    "#### tSNE - looks at the original data that is entered into the algorithm and looks at how to best represent this data using less dimensions by matching both distributions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,26 +99,24 @@
     "    X_test_new = pca.transform(X_test)\n",
     "    logger.info(\"X_train size after PCA: {}\".format(X_train_new.shape))\n",
     "    logger.info(\"X_test size after PCA: {}\".format(X_test_new.shape))\n",
+    "    logger.info(\"Cumulative explained variation for {} principal components: {}\".format(n,np.sum(pca.explained_variance_ratio_)))\n",
     "    return [X_train_new,X_test_new]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tsneSelection(X_train, X_test, n):\n",
+    "def tsneSelection(X_train, n, v):\n",
     "    '''\n",
     "    t-distributed Stochastic Neighbor Embedding feature selection.  Select n features. \n",
     "    '''\n",
-    "    tsne = TSNE(n_components=n)\n",
-    "    tsne.fit(X_train)\n",
-    "    X_train_new = tsne.transform(X_train)\n",
-    "    X_test_new = tsne.transform(X_test)\n",
-    "    logger.info(\"X_train size after PCA: {}\".format(X_train_new.shape))\n",
-    "    logger.info(\"X_test size after PCA: {}\".format(X_test_new.shape))\n",
-    "    return [X_train_new,X_test_new]"
+    "    tsne = TSNE(n_components=n,verbose=v)\n",
+    "    X_train_new = tsne.fit_transform(X_train)\n",
+    "    logger.info(\"X_train size after tSNE: {}\".format(X_train_new.shape))\n",
+    "    return X_train_new"
    ]
   },
   {
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +183,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Scatterplot Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter plot 2D & 3D\n",
+    "num_class = 36\n",
+    "colors = it.cycle([\"aquamarine\", \"crimson\", \"darkseagreen\", \"deeppink\",\"wheat\",\"violet\",\"fuchsia\",\"turquoise\",\\\n",
+    "                   \"ivory\", \"honeydew\", \"rosybrown\",\"red\",\"lemonchiffon\",\"darkorchid\",\"mintcream\",\"papayawhip\",\\\n",
+    "                   \"beige\",\"darkcyan\",\"firebrick\",\"deepskyblue\",\"seashell\",\"mediumpurple\",\"goldenrod\",\"lightcoral\",\\\n",
+    "                   \"limegreen\",\"cadetblue\",\"darkmagenta\",\"ghostwhite\",\"gainsboro\",\"paleturquoise\",\"teal\",\"peru\",\\\n",
+    "                  \"maroon\",\"olivedrab\",\"springgreen\",\"yellowgreen\"])\n",
+    "classes = it.cycle(['Breast', 'Uterine Corpus', 'Head', 'Kidney Renal Clear', 'Lung Adenocarcinoma', 'Brain', 'Thyroid', 'Prostate', 'Ovarian', 'Lung Squamous', 'Skin', 'Colon', 'Stomach', 'Bladder', 'Liver', 'Cervical', 'Kidney Renal Papillary', 'Leukemia', 'Sarcoma', 'Esophageal', 'Pheochromocytoma', 'Pancreatic', 'Rectum', 'Testicular', 'Wilms', 'Thymoma', 'Mesothelioma', 'Adrenocortical', 'Uveal', 'Kidney Chromophobe', 'Uterine Carcinosarcoma', 'Lymphoid', 'Rhabdoid', 'Cholangiocarcinoma', 'Glioblastoma'])\n",
+    "\n",
+    "\n",
+    "def scatter2D(X_train_2d):\n",
+    "    '''\n",
+    "    Function to genrate traces for 2D scatter plot\n",
+    "    Args: 2-feature X_train of dimension [?,2]\n",
+    "    Return: list of scatter plot trace objects\n",
+    "    '''\n",
+    "    data=[]\n",
+    "    for label in range(0,num_class):\n",
+    "        filtered_idx = np.argwhere(y_train==label)[:,0]\n",
+    "        trace = go.Scatter(\n",
+    "            x=X_train_2d[filtered_idx,0],\n",
+    "            y=X_train_2d[filtered_idx,1],\n",
+    "            mode='markers',\n",
+    "            marker=dict(\n",
+    "                size=5,\n",
+    "                line=dict(\n",
+    "                    color=next(colors),\n",
+    "                    width=0.1\n",
+    "                    ),\n",
+    "                opacity=0.5\n",
+    "                ),\n",
+    "            name=next(classes)\n",
+    "            )\n",
+    "        data.append(trace)\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "def scatter3D(X_train_3d):\n",
+    "    '''\n",
+    "    Function to generate traces for 3D scatter plot\n",
+    "    Args: 3-feature X_train of dimension [?,3]\n",
+    "    ReturnL list of scatter plot trace objects\n",
+    "    '''\n",
+    "    data=[]\n",
+    "    for label in range(0,num_class):\n",
+    "        filtered_idx = np.argwhere(y_train==label)[:,0]\n",
+    "        trace = go.Scatter3d(\n",
+    "            x=X_train_3d[filtered_idx,0],\n",
+    "            y=X_train_3d[filtered_idx,1],\n",
+    "            z=X_train_3d[filtered_idx,2],\n",
+    "            mode='markers',\n",
+    "            marker=dict(\n",
+    "                size=5,\n",
+    "                line=dict(\n",
+    "                    color=next(colors),\n",
+    "                    width=0.1\n",
+    "                    ),\n",
+    "                opacity=0.5\n",
+    "                ),\n",
+    "            name=next(classes)\n",
+    "            )\n",
+    "        data.append(trace)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pre-processing\n",
     "### Separate X (features) and y (labels)\n",
     "### Split training (70%) and testing (30%) dataset\n",
@@ -188,13 +276,9 @@
     "data_file = \"../data/miRNA.csv\" # directory to miRNA_matrix.csv\n",
     "\n",
     "df = pd.read_csv(data_file)\n",
-    "# print(df)\n",
     "y_data = df.pop('label').values\n",
-    "\n",
     "df.pop('file_id')\n",
-    "\n",
     "columns =df.columns\n",
-    "#print (columns)\n",
     "X_data = df.values\n",
     "\n",
     "print (\"Original dataset size:\",X_data.shape[0])\n",
@@ -214,12 +298,17 @@
     "scaler = scaler.fit(X_train.astype(np.float64))\n",
     "X_train = scaler.transform(X_train.astype(np.float64))\n",
     "X_test = scaler.transform(X_test.astype(np.float64))\n",
-    "# print (X_train.mean(axis=0))\n",
-    "# print(X_train.std(axis=0))\n",
-    "\n",
-    "# check the distribution of tumor and normal sampels in traing and test data set.\n",
-    "# logger.info(\"Percentage of tumor cases in training set is {}\".format(sum(y_train)/len(y_train)))\n",
-    "# logger.info(\"Percentage of tumor cases in test set is {}\".format(sum(y_test)/len(y_test)))\n"
+    "logger.info(\"Mean of features after standardization: {}\".format(X_train.mean(axis=0)))\n",
+    "logger.info(\"STD of features after standardization: {}\".format(X_train.std(axis=0)))\n",
+    "            \n",
+    "layout = go.Layout(\n",
+    "    margin=dict(\n",
+    "        l=0,\n",
+    "        r=0,\n",
+    "        b=0,\n",
+    "        t=0\n",
+    "        )\n",
+    ")"
    ]
   },
   {
@@ -253,45 +342,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PCA feature reduction\n",
-    "n = 50\n",
+    "# PCA feature reduction to n-components\n",
+    "n = 650\n",
     "X_train_pca, X_test_pca = pcaSelection(X_train, X_test, n)\n",
     "scores_pca = model_fit_predict(X_train_pca,X_test_pca,y_train,y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2018-10-19 17:20:37,095 - GDC - INFO] X_train size after PCA: (8040, 50)\n",
-      "[2018-10-19 17:20:37,096 - GDC - INFO] X_test size after PCA: (3446, 50)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'TSNE' object has no attribute 'transform'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-2a9829a5a279>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mn2\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mX_train_pca\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_pca\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpcaSelection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mX_train_tsne\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_tsne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtsneSelection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_pca\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_pca\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mscores_tsne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_fit_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_tsne\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_test_tsne\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-3aa6271790b2>\u001b[0m in \u001b[0;36mtsneSelection\u001b[0;34m(X_train, X_test, n)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mtsne\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTSNE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_components\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mtsne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mX_train_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtsne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mX_test_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtsne\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"X_train size after PCA: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_new\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'TSNE' object has no attribute 'transform'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# PCA+tSNE feature reduction\n",
-    "n1 = 50\n",
-    "n2 =3\n",
-    "X_train_pca, X_test_pca = pcaSelection(X_train, X_test, n1)\n",
-    "X_train_tsne, X_test_tsne = tsneSelection(X_train_pca, X_test_pca, n2)\n",
-    "scores_tsne = model_fit_predict(X_train_tsne,X_test_tsne,y_train,y_test)"
+    "# PCA 3-component scatter plot\n",
+    "X_train_pca3, X_test_pca3 = pcaSelection(X_train, X_test, 3)\n",
+    "pca3_traces = scatter3D(X_train_pca3)\n",
+    "fig1 = go.Figure(data=pca3_traces, layout=layout)\n",
+    "py.iplot(fig1, filename='PCA_3D_Scatter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tSNE 3-component scatter plot (PCA->tSNE)\n",
+    "X_train_tsne3 = tsneSelection(X_train_pca,3,1)\n",
+    "tsne3_traces = scatter3D(X_train_tsne3)\n",
+    "fig3 = go.Figure(data=tsne3_traces, layout=layout)\n",
+    "py.iplot(fig3, filename='tSNE_3D_Scatter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PCA 2-component scatter plot\n",
+    "X_train_pca2, X_test_pca2 = pcaSelection(X_train, X_test, 2)\n",
+    "pca2_traces = scatter2D(X_train_pca2)\n",
+    "fig2 = go.Figure(data=pca2_traces, layout=layout)\n",
+    "py.iplot(fig2, filename='PCA_2D_Scatter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tSNE 2-component scatter plot (PCA->tSNE)\n",
+    "X_train_tsne2 = tsneSelection(X_train_pca,2,1)\n",
+    "tsne2_traces = scatter2D(X_train_tsne2)\n",
+    "fig4 = go.Figure(data=tsne2_traces, layout=layout)\n",
+    "py.iplot(fig4, filename='tSNE_2D_Scatter')"
    ]
   },
   {
