added more eval charts

--- a/src/predict.ipynb
+++ b/src/predict.ipynb
@@ -164,9 +164,9 @@
     "                   \"beige\",\"darkcyan\",\"firebrick\",\"deepskyblue\",\"seashell\",\"mediumpurple\",\"goldenrod\",\"lightcoral\",\\\n",
     "                   \"limegreen\",\"cadetblue\",\"darkmagenta\",\"ghostwhite\",\"gainsboro\",\"paleturquoise\",\"teal\",\"peru\",\\\n",
     "                  \"maroon\",\"olivedrab\",\"springgreen\",\"yellowgreen\"])\n",
-    "classes = it.cycle(['Normal','Breast', 'Uterine Corpus', 'Head', 'Kidney Renal Clear', 'Lung Adenocarcinoma', 'Brain', 'Thyroid', 'Prostate', 'Ovarian', 'Lung Squamous', 'Skin', 'Colon', 'Stomach', 'Bladder', 'Liver', 'Cervical', 'Kidney Renal Papillary', 'Leukemia', 'Sarcoma', 'Esophageal', 'Pheochromocytoma', 'Pancreatic', 'Rectum', 'Testicular', 'Wilms', 'Thymoma', 'Mesothelioma', 'Adrenocortical', 'Uveal', 'Kidney Chromophobe', 'Uterine Carcinosarcoma', 'Lymphoid', 'Rhabdoid', 'Cholangiocarcinoma'])\n",
+    "classes = it.cycle(['Normal','Breast', 'Uterine Corpus', 'Head', 'Kidney Renal Clear', 'Lung Adenocarcinoma', 'Brain', 'Thyroid', 'Prostate', 'Ovarian', 'Lung Squamous', 'Skin', 'Colon', 'Stomach', 'Bladder', 'Liver', 'Cervical', 'Kidney Renal Papillary', 'Leukemia', 'Sarcoma', 'Esophageal', 'Pheochromocytoma', 'Pancreatic', 'Rectum', 'Testicular', 'Wilms', 'Thymoma', 'Mesothelioma', 'Adrenocortical', 'Uveal', 'Kidney Chromophobe', 'Uterine Carcinosarcoma', 'Lymphoid', 'Rhabdoid', 'Cholangiocarcinoma','Glioblastoma'])\n",
     "\n",
-    "classes_labels = ['Normal','Breast', 'Uterine Corpus', 'Head', 'Kidney Renal Clear', 'Lung Adenocarcinoma', 'Brain', 'Thyroid', 'Prostate', 'Ovarian', 'Lung Squamous', 'Skin', 'Colon', 'Stomach', 'Bladder', 'Liver', 'Cervical', 'Kidney Renal Papillary', 'Leukemia', 'Sarcoma', 'Esophageal', 'Pheochromocytoma', 'Pancreatic', 'Rectum', 'Testicular', 'Wilms', 'Thymoma', 'Mesothelioma', 'Adrenocortical', 'Uveal', 'Kidney Chromophobe', 'Uterine Carcinosarcoma', 'Lymphoid', 'Rhabdoid', 'Cholangiocarcinoma']\n",
+    "classes_labels = ['Normal','Breast', 'Uterine Corpus', 'Head', 'Kidney Renal Clear', 'Lung Adenocarcinoma', 'Brain', 'Thyroid', 'Prostate', 'Ovarian', 'Lung Squamous', 'Skin', 'Colon', 'Stomach', 'Bladder', 'Liver', 'Cervical', 'Kidney Renal Papillary', 'Leukemia', 'Sarcoma', 'Esophageal', 'Pheochromocytoma', 'Pancreatic', 'Rectum', 'Testicular', 'Wilms', 'Thymoma', 'Mesothelioma', 'Adrenocortical', 'Uveal', 'Kidney Chromophobe', 'Uterine Carcinosarcoma', 'Lymphoid', 'Rhabdoid', 'Cholangiocarcinoma','Glioblastoma']\n",
     "\n",
     "def scatter2D(X_train_2d):\n",
     "    '''\n",
@@ -764,7 +764,153 @@
       "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:   11.1s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
       "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:    7.5s finished\n",
-      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 5000 out of 5000 | elapsed:  2.6min finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:   12.1s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:    8.7s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 200 out of 200 | elapsed:    6.3s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:    0.3s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:    0.3s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 200 out of 200 | elapsed:    6.1s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:    0.4s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 200 out of 200 | elapsed:    0.5s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 500 out of 500 | elapsed:   15.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.7s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.8s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 500 out of 500 | elapsed:   17.3s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    1.0s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:    0.7s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 1000 out of 1000 | elapsed:   36.9s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:    1.7s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:    1.5s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 1000 out of 1000 | elapsed:   30.9s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:    1.6s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:    1.4s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 5000 out of 5000 | elapsed:  2.7min finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:   11.1s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:    9.0s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done 5000 out of 5000 | elapsed:  2.7min finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:   10.2s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:    8.0s finished\n",
+      "[Parallel(n_jobs=1)]: Done  24 out of  24 | elapsed: 24.9min finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:  6.2min finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'min_samples_leaf': 1, 'n_estimators': 5000}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 5000 out of 5000 | elapsed:   19.2s finished\n",
+      "/Users/karenhillarywang/miniconda3/envs/gdc_project/lib/python3.7/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning:\n",
+      "\n",
+      "Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8284968078932096\n",
+      "[[163   5   1 ...   0   0   0]\n",
+      " [  3 290   7 ...   0   0   0]\n",
+      " [  5   4 152 ...   0   0   0]\n",
+      " ...\n",
+      " [  0   0   0 ...  14   0   0]\n",
+      " [  0   0   0 ...   0  19   0]\n",
+      " [  1   0   2 ...   1   0   0]]\n",
+      "                        precision    recall  f1-score   support\n",
+      "\n",
+      "                Normal       0.80      0.81      0.81       201\n",
+      "                Breast       0.85      0.90      0.87       324\n",
+      "        Uterine Corpus       0.79      0.87      0.83       174\n",
+      "                  Head       0.62      0.78      0.69       152\n",
+      "    Kidney Renal Clear       0.91      0.94      0.92       155\n",
+      "   Lung Adenocarcinoma       0.76      0.81      0.78       162\n",
+      "                 Brain       0.98      0.98      0.98       170\n",
+      "               Thyroid       0.97      0.97      0.97       149\n",
+      "              Prostate       0.97      0.99      0.98       155\n",
+      "               Ovarian       0.99      0.95      0.97       146\n",
+      "         Lung Squamous       0.65      0.73      0.69       142\n",
+      "                  Skin       0.94      0.95      0.95       128\n",
+      "                 Colon       0.59      0.84      0.69       127\n",
+      "               Stomach       0.61      0.69      0.65       134\n",
+      "               Bladder       0.82      0.69      0.75       129\n",
+      "                 Liver       0.97      0.93      0.95       107\n",
+      "              Cervical       0.60      0.35      0.44        92\n",
+      "Kidney Renal Papillary       0.88      0.90      0.89        92\n",
+      "              Leukemia       0.99      1.00      1.00       114\n",
+      "               Sarcoma       0.77      0.86      0.81        88\n",
+      "            Esophageal       0.67      0.04      0.07        57\n",
+      "      Pheochromocytoma       0.93      0.99      0.96        69\n",
+      "            Pancreatic       0.72      0.66      0.69        62\n",
+      "                Rectum       0.86      0.24      0.37        51\n",
+      "            Testicular       0.93      0.95      0.94        41\n",
+      "                 Wilms       0.89      1.00      0.94        39\n",
+      "               Thymoma       1.00      0.96      0.98        27\n",
+      "          Mesothelioma       1.00      0.38      0.56        26\n",
+      "        Adrenocortical       1.00      0.78      0.88        23\n",
+      "                 Uveal       0.91      0.87      0.89        23\n",
+      "    Kidney Chromophobe       0.89      0.77      0.83        22\n",
+      "Uterine Carcinosarcoma       1.00      0.50      0.67        14\n",
+      "              Lymphoid       0.74      1.00      0.85        14\n",
+      "              Rhabdoid       1.00      0.86      0.93        22\n",
+      "    Cholangiocarcinoma       0.00      0.00      0.00        15\n",
+      "\n",
+      "             micro avg       0.83      0.83      0.83      3446\n",
+      "             macro avg       0.83      0.77      0.78      3446\n",
+      "          weighted avg       0.83      0.83      0.82      3446\n",
+      "\n",
+      "Running AdaBoostClassifier ...\n",
+      "Fitting 2 folds for each of 12 candidates, totalling 24 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
      ]
     }
    ],
@@ -817,8 +963,8 @@
     "layout = go.Layout(title=\"Logistic Regression ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=logistic_roc_data, layout=layout)\n",
-    "py.iplot(fig)\n"
+    "fig_roc_1 = go.Figure(data=logistic_roc_data, layout=layout)\n",
+    "py.iplot(fig_roc_1)\n"
    ]
   },
   {
@@ -831,8 +977,8 @@
     "layout = go.Layout(title=\"Extra Trees Classifier ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=extratrees_roc_data, layout=layout)\n",
-    "py.iplot(fig)"
+    "fig_roc_2 = go.Figure(data=extratrees_roc_data, layout=layout)\n",
+    "py.iplot(fig_roc_2)"
    ]
   },
   {
@@ -845,8 +991,8 @@
     "layout = go.Layout(title=\"Random Forest Classifier ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=rf_roc_data, layout=layout)\n",
-    "py.iplot(fig)"
+    "fig_roc_3 = go.Figure(data=rf_roc_data, layout=layout)\n",
+    "py.iplot(fig_roc_3)"
    ]
   },
   {
@@ -859,8 +1005,8 @@
     "layout = go.Layout(title=\"Adaboost Classifier ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=adaboost_roc_data, layout=layout)\n",
-    "py.iplot(fig)"
+    "fig_roc_4 = go.Figure(data=adaboost_roc_data, layout=layout)\n",
+    "py.iplot(fig_roc_4)"
    ]
   },
   {
@@ -873,8 +1019,8 @@
     "layout = go.Layout(title=\"Gradient Boosting Classifier ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=gd_roc_data, layout=layout)\n",
-    "py.iplot(fig)"
+    "fig_roc_5 = go.Figure(data=gd_roc_data, layout=layout)\n",
+    "py.iplot(fig_roc_5)"
    ]
   },
   {
@@ -887,8 +1033,8 @@
     "layout = go.Layout(title=\"SVC Classifier ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=svc_roc_data, layout=layout)\n",
-    "py.iplot(fig)"
+    "fig_roc_6 = go.Figure(data=svc_roc_data, layout=layout)\n",
+    "py.iplot(fig_roc_6)"
    ]
   },
   {
@@ -901,8 +1047,8 @@
     "layout = go.Layout(title=\"Multi-Layer Perceptron Classifier ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=mlp_roc_data, layout=layout)\n",
-    "py.iplot(fig)"
+    "fig_roc_7 = go.Figure(data=mlp_roc_data, layout=layout)\n",
+    "py.iplot(fig_roc_7)"
    ]
   },
   {
@@ -912,20 +1058,15 @@
    "outputs": [],
    "source": [
     "# [-1]\n",
-    "all_fpr_micro=[fpr_pca['LogisticRegression']['micro'],fpr_pca['ExtraTreesClassifier']['micro'],\n",
-    "              fpr_pca['RandomForestClassifier']['micro'],fpr_pca['AdaBoostClassifier']['micro'],\n",
-    "              fpr_pca['GradientBoostingClassifier']['micro'],fpr_pca['SVC']['micro'],\n",
-    "              fpr_pca['MLP']['micro']]\n",
-    "all_tpr_micro= [tpr_pca['LogisticRegression']['micro'],tpr_pca['ExtraTreesClassifier']['micro'],\n",
-    "              tpr_pca['RandomForestClassifier']['micro'],tpr_pca['AdaBoostClassifier']['micro'],\n",
-    "              tpr_pca['GradientBoostingClassifier']['micro'],tpr_pca['SVC']['micro'],\n",
-    "              tpr_pca['MLP']['micro']]\n",
-    "model_comparison_data = ROCplot(all_fpr_micro,all_tpr_micro)\n",
+    "roc_micros=[logistic_roc_data[-1],extratrees_roc_data[-1],\n",
+    "              rf_roc_data[-1],adaboost_roc_data[-1],\\\n",
+    "              gd_roc_data[-1],svc_roc_data[-1],\\\n",
+    "              mlp_roc_data[-1]]\n",
     "layout = go.Layout(title=\"All Model ROC curve\",\n",
     "                   xaxis=dict(title='False Positive Rate'),\n",
     "                   yaxis=dict(title='True Positive Rate'))\n",
-    "fig = go.Figure(data=mlp_roc_data, layout=layout)\n",
-    "py.iplot(fig)"
+    "fig_roc_all = go.Figure(data=roc_micros, layout=layout)\n",
+    "py.iplot(fig_roc_all)"
    ]
   },
   {
@@ -963,6 +1104,17 @@
     "\n",
     "bar_comp = go.Figure(data=data, layout=layout)\n",
     "py.iplot(bar_comp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, value in report_pca.items() :\n",
+    "    print (\"Classification Report: \"+key)\n",
+    "    print (value +\"\\n\")"
    ]
   },
   {
